--- a/backend/.env
+++ b/backend/.env
@@ -6,9 +6,9 @@ PORT=8080
 
 DB_DIALECT=postgres
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=8432
 DB_USER=postgres
-DB_PASS=123
+DB_PASS=66r79kog
 DB_NAME=whaticket47
 
 ID_QUEUE_BLACKLIST = 2
